# floradb

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml
arrow/: heelo.c
examples/dt/: main.rs
reference/: compared_lance  notes.md  query.md
src/: database.zig  error.zig  internal_types.zig  lib.rs  limits.zig  main.zig  parser.rs  root.zig  types.zig
src/core/: column.rs  mod.rs  schema.rs  table.rs  text.rs  transformer.rs
src/device/: cpu.rs  mod.rs
src/elements/: column.rs  schema.rs
src/transformers/: embedding.rs
src/types/: text.rs
test/: all.zig  table.zig  utils.zig
