[package]
name = "floradb"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.2.0"
candle-core = { git = "https://github.com/akhildevelops/candle.git", version = "0.9.1", features = ["mkl"] }
candle-nn = { git = "https://github.com/akhildevelops/candle.git", version = "0.9.1", features = ["mkl"] }
candle-transformers = { git = "https://github.com/akhildevelops/candle.git", version = "0.9.1", features = ["mkl"] }
datafusion = "48.0.1"
nom = "8.0.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
